{
    "version": 1,
    "name": "ActionMap",
    "maps": [
        {
            "name": "Walk",
            "id": "b7bc691d-0b66-4a47-a2b0-4167a31bef4f",
            "actions": [
                {
                    "name": "Slot1",
                    "type": "Button",
                    "id": "c2aca2e8-b48a-4974-90ef-93654944b200",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot2",
                    "type": "Button",
                    "id": "58fb4580-f1ad-42b8-aab9-772fcaf89af3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot3",
                    "type": "Button",
                    "id": "026e8c40-cfce-49a1-88c3-bed68cb9cd3e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot4",
                    "type": "Button",
                    "id": "21647505-ae13-41c9-bbbe-8baf36f1a707",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot5",
                    "type": "Button",
                    "id": "8d49a9e6-f72f-4ec3-a724-aa0d082e6e79",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot6",
                    "type": "Button",
                    "id": "e07e3550-477a-43a3-86b1-a0641ab1bb0d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot7",
                    "type": "Button",
                    "id": "756998ab-5680-428c-aaa6-93d6d2ea7107",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot8",
                    "type": "Button",
                    "id": "d46a2afc-e720-4afa-a334-6d47addcc88a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot9",
                    "type": "Button",
                    "id": "348cfcfa-2506-4ea3-a64f-342329f24d1d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveAxis",
                    "type": "Value",
                    "id": "1f375fea-ac86-4d61-b074-d3c28ad94760",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookAxis",
                    "type": "Value",
                    "id": "1b8cbd9b-583c-4e2f-922b-db7e9e02553c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "58b72d7b-3468-4c3f-b7df-09fd92379664",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9474f318-3949-420e-b025-d5d6cfd923ab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "587dc65c-f44b-467d-b89c-44f3a3ef0da7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1f8f4686-a302-4f9c-90fe-e3445cc10a62",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Slot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef4c3a49-3a70-47ac-a283-9e58cbc2b5bd",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Slot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a22c7f0-3b22-499a-9b3e-19898718f6ee",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Slot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d8a4794-28d6-4e0b-bc14-6d08a7f191f6",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Slot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0227a94a-2d5d-4e38-9642-95b10b29b358",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Slot5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85c2d948-fbf2-4721-9965-717a2679f374",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Slot6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1de8e7d8-dada-4914-a0fd-f833dd4abcb1",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Slot7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94863cce-f0e9-43c2-a032-9fe4dbe26231",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Slot8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42ebb4d5-482a-4301-8226-69ae1efb24c9",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Slot9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c18c96dd-7a38-42c8-af96-ca2d80b19f63",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "LookAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05282e25-96f5-415e-be71-087adce426c6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ce6e0e4-25bb-48b8-b352-d85a754f9ec3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8aa2e81-08c1-4072-b77e-b8c0662db32b",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "891c4cd5-bece-49f5-b0da-02d7adff6a58",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "96596f90-bd4c-4d5d-8617-75f371ff7ed6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MoveAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "22a25718-d297-4019-80bb-dde741f226de",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MoveAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "47de9f16-f7c3-4bac-9d23-4e851a960a50",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MoveAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c18c7dbb-39be-4e26-8dd1-1a6543e2b099",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MoveAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Cooking",
            "id": "03f04723-0fd7-4ec7-bf1d-ff6b1342f751",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Menu",
            "id": "2be0522d-2566-4f90-8198-f2dfaf59a336",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}