namespace Bootlegger
{
    public enum ActionKey
    {
        // Hotbar slots
        Slot1,
        Slot2,
        Slot3,
        Slot4,
        Slot5,
        Slot6,
        Slot7,
        Slot8,
        Slot9,

        // Movement
        Jump,
        Crouch,

        // Other
        Interact
    }
}