namespace Bootlegger
{
    public struct InventoryInput
    {
        public bool Slot1;
        public bool Slot2;
        public bool Slot3;
        public bool Slot4;
        public bool Slot5;
        public bool Slot6;
        public bool Slot7;
        public bool Slot8;
        public bool Slot9;
    }
}
